새벽 5시 커밋

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,17 @@
         android:usesCleartextTraffic="true">
         <activity android:name=".MainFormActivity"></activity>
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".QuizActivity" />
+        <activity android:name=".QuizAnswerActivity" />
+        <activity android:name=".SplashActivity" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".MainActivity">
         </activity>
     </application>
 
